SERVER-51425: Pause JournalFlusher during replication rollback