src/mongo/db/storage/control/storage_control.cpp
@@ -47,11 +47,13 @@ namespace StorageControl {
 namespace {
 
 bool areControlsStarted = false;
+bool journalFlusherPaused = false;
 
 }  // namespace
 
 void startStorageControls(ServiceContext* serviceContext, bool forTestOnly) {
     auto storageEngine = serviceContext->getStorageEngine();
+    invariant(!areControlsStarted);
 
     // Instantiate a thread to periodically, and upon request, flush writes to disk.
     //
@@ -69,11 +71,17 @@ void startStorageControls(ServiceContext* serviceContext, bool forTestOnly) {
     //
     // (Note: the ephemeral engine returns false for isDurable(), so we must be careful not to
     // disable it.)
-    std::unique_ptr<JournalFlusher> journalFlusher = std::make_unique<JournalFlusher>(
-        /*disablePeriodicFlushes*/ forTestOnly ||
-        (!storageEngine->isDurable() && !storageEngine->isEphemeral()));
-    journalFlusher->go();
-    JournalFlusher::set(serviceContext, std::move(journalFlusher));
+    if (journalFlusherPaused) {
+        // This is a restart and the JournalListener was paused. Resume the existing JournalFlusher.
+        JournalFlusher::get(serviceContext)->resume();
+        journalFlusherPaused = false;
+    } else {
+        std::unique_ptr<JournalFlusher> journalFlusher = std::make_unique<JournalFlusher>(
+            /*disablePeriodicFlushes*/ forTestOnly ||
+            (!storageEngine->isDurable() && !storageEngine->isEphemeral()));
+        journalFlusher->go();
+        JournalFlusher::set(serviceContext, std::move(journalFlusher));
+    }
 
     if (storageEngine->supportsCheckpoints() && !storageEngine->isEphemeral() &&
         !storageGlobalParams.readOnly) {
@@ -86,14 +94,28 @@ void startStorageControls(ServiceContext* serviceContext, bool forTestOnly) {
     areControlsStarted = true;
 }
 
-void stopStorageControls(ServiceContext* serviceContext, const Status& reason) {
+void stopStorageControls(ServiceContext* serviceContext, const Status& reason, bool forRestart) {
     if (areControlsStarted) {
-        JournalFlusher::get(serviceContext)->shutdown(reason);
+        if (forRestart) {
+            // Pausing instead of shutting down the journal flusher for restart.
+            JournalFlusher::get(serviceContext)->pause();
+            journalFlusherPaused = true;
+        } else {
+            JournalFlusher::get(serviceContext)->shutdown(reason);
+        }
 
         auto checkpointer = Checkpointer::get(serviceContext);
         if (checkpointer) {
             checkpointer->shutdown(reason);
         }
+
+        areControlsStarted = false;
+    } else {
+        // The JournalFlusher was not resumed after being paused with forRestart.
+        invariant(!journalFlusherPaused);
+        // Cannot stop storage controls for restart if the controls were not started or were already
+        // stopped.
+        invariant(!forRestart);
     }
 }
 
